--- a/src/public/style.css
+++ b/src/public/style.css
@@ -6,13 +6,153 @@
 
 :root {
   --dark: #101010;
-  --white: #f6f6f6;
+  --dark2: #191919;
+  --dark3: #212121;
+  --dark4: #2a2a2a;
+  --dark5: #323232;
+  --dark6: #3b3b3b;
+
+  --white: #fff;
+  --white2: #f6f6f6;
 
   font-size: 62.5%;
 }
 
 html, body {
-  background-color: var(--white);
+  background-color: var(--white2);
   color: var(--dark);
   font-size: 1.6rem;
+
+  width: 100vw;
+  min-height: 100vh;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+
+  width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.header {
+  min-height: 5rem;
+  background-color: var(--dark3);
+  color: var(--white2);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.6rem;
+}
+
+.footer {
+  min-height: 2rem;
+  background-color: var(--dark3);
+  color: var(--white2);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.6rem;
+}
+
+.main {
+  width: 100vw;
+  min-height: calc(100vh - 7rem);
+  display: flex;
+}
+
+.aside {
+  max-width: 5rem;
+  min-width: 5rem;
+  padding: 0.4rem 0;
+
+  min-height: calc(100vh - 7.8rem);
+  background-color: var(--dark3);
+  color: var(--white2);
+  margin: 0.4rem;
+  border-radius: 0.6rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.4rem;
+  padding: 0 0.4rem;
+}
+
+.nav-link {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--dark3);
+  box-shadow: 0 0 0.2rem var(--dark6);
+  font-size: 2rem;
+  border-radius: 0.4rem;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  transition: all ease .4s;
+  background-color: var(--dark3);
+  box-shadow: 0 0 0.1rem var(--white2);
+}
+
+.nav-link:active {
+  transform: scale(0.9);
+}
+
+.nav-link.active {
+  background-color: var(--dark6);
+  box-shadow: 0 0 0.1rem var(--dark);
+}
+
+.section {
+  margin: 0.4rem 0;
+  border-radius: 0.4rem;
+  background-color: var(--white);
+  box-shadow: 0 0 0.2rem 0 var(--dark6);
+  min-width: calc(100vw - 6.2rem);
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  padding: 1.6rem;
+}
+
+input {
+  background-color: var(--white);
+  border: solid 0.1rem var(--dark);
+  border-radius: 0.4rem;
+  padding: 0.6rem 1.6rem;
+  font-size: 1.6rem;
+  margin: 0.4rem;
+}
+
+button {
+  background-color: var(--dark2);
+  color: var(--white2);
+  border: solid 0.1rem var(--dark);
+  border-radius: 4px;
+  padding: 0.8rem 1.6rem;
+  font-weight: 700;
+  margin: 0.4rem;
 }
