--- a/src/public/style.css
+++ b/src/public/style.css
@@ -24,7 +24,8 @@ html, body {
   font-size: 1.6rem;
 
   width: 100vw;
-  min-height: 100vh;
+  min-height: calc(100vh - 1rem);
+  font-family: sans-serif;
 }
 
 #app {
@@ -32,8 +33,26 @@ html, body {
   flex-direction: column;
 
   width: 100vw;
-  min-height: 100vh;
+  min-height: calc(100vh - 1rem);
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0.9rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--dark5);
+  border-radius: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--dark6);
 }
 
 .header {
@@ -47,6 +66,22 @@ html, body {
   padding: 0 1.6rem;
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  font-size: 2rem;
+  text-decoration: none;
+  color: var(--white);
+}
+
 .footer {
   min-height: 2rem;
   background-color: var(--dark3);
@@ -54,13 +89,23 @@ html, body {
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 0 1.6rem;
+}
+
+.footer span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  gap: 0.4rem;
 }
 
 .main {
   width: 100vw;
   min-height: calc(100vh - 7rem);
+  max-height: calc(100vh - 7rem);
+  overflow: hidden;
   display: flex;
 }
 
@@ -116,7 +161,7 @@ html, body {
 
 .nav-link.active {
   background-color: var(--dark6);
-  box-shadow: 0 0 0.1rem var(--dark);
+  box-shadow: 0.1rem 0.1rem 0.1rem var(--dark);
 }
 
 .section {
@@ -124,27 +169,40 @@ html, body {
   border-radius: 0.4rem;
   background-color: var(--white);
   box-shadow: 0 0 0.2rem 0 var(--dark6);
+
   min-width: calc(100vw - 6.2rem);
+  min-height: calc(100vh - 8rem);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .page {
-  width: 100%;
-  height: 100%;
+  min-width: calc(100vw - 6.2rem);
+  min-height: calc(100vh - 8rem);
+  overflow: hidden;
 }
 
 .container {
-  width: 100%;
-  height: 100%;
+  min-width: calc(100vw - 7.8rem);
+  min-height: calc(100vh - 7.9rem);
+  overflow: auto;
+
   padding: 1.6rem;
+  overflow-y: scroll;
 }
 
 input {
-  background-color: var(--white);
-  border: solid 0.1rem var(--dark);
-  border-radius: 0.4rem;
-  padding: 0.6rem 1.6rem;
+  background-color: var(--white2);
+  border: solid 0.1rem transparent;
+  border-radius: 0.3rem;
+  box-shadow: 0 0 0.2rem var(--dark2);
+  padding: 0 1.6rem;
   font-size: 1.6rem;
-  margin: 0.4rem;
+  min-height: 3.5rem;
+}
+
+input:focus {
+  outline: solid 0.2rem rebeccapurple;
 }
 
 button {
@@ -152,7 +210,136 @@ button {
   color: var(--white2);
   border: solid 0.1rem var(--dark);
   border-radius: 4px;
-  padding: 0.8rem 1.6rem;
+  min-height: 3.5rem;
+  padding: 0 1.6rem;
   font-weight: 700;
-  margin: 0.4rem;
+  cursor: pointer;
 }
+
+button i {
+  font-size: 1.8rem;
+}
+
+button:hover {
+  transition: all ease .4s;
+  background-color: var(--dark5);
+  color: var(--white2);
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
+.btn-muted {
+  background-color: var(--white2);
+  border: solid 0.1rem transparent;
+  box-shadow: 0 0 0.2rem var(--dark2);
+  color: var(--dark6);
+}
+
+.login {
+  margin: auto auto;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white);
+  min-width: 32rem;
+  max-width: 32rem;
+  min-height: calc(100vh - 13rem);
+  max-height: calc(100vh - 13rem);
+  border-radius: 0.4rem;
+  overflow-y: auto;
+}
+
+.l-header {
+  min-height: 4rem;
+  background-color: var(--dark3);
+  color: var(--white2);
+
+  display: flex;
+  align-items: center;
+  padding: 0 0.4rem;
+  gap: 0.4rem;
+}
+
+.l-header button {
+  flex: 1;
+}
+
+.lh-btn-active {
+  background-color: rebeccapurple;
+}
+
+.l-main {
+  display: flex;
+  flex-direction: column;
+
+  min-width: 32rem;
+  max-width: 32rem;
+  min-height: calc(100vh - 18rem);
+  max-height: calc(100vh - 18rem);
+
+  gap: 0.4rem;
+  padding: 1.6rem;
+  overflow-y: auto;
+}
+
+.l-main h3 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: var(--dark6);
+}
+
+.l-footer {
+  min-height: 1rem;
+  background-color: var(--dark3);
+  color: var(--white2);
+
+  display: flex;
+  align-items: center;
+
+  padding: 0 1.6rem;
+}
+
+.l-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control-button {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.4rem;
+  margin: 1.6rem 0;
+}
+
+.form-control label {
+  color: var(--dark6);
+  font-size: 1.4rem;
+  margin-bottom: 0.6rem;
+}
+
+.fc-group {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.form-control input {
+  width: 100%;
+}
+
+.lf-message {
+  text-align: center;
+  font-size: 1.4rem;
+  color: rebeccapurple;
+  margin: 0.4rem 0;
+}
+
+
+
