--- a/src/public/style.css
+++ b/src/public/style.css
@@ -149,9 +149,11 @@ body {
 .nav-link {
   width: 100%;
   height: 4rem;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
   background-color: var(--dark3);
   box-shadow: 0 0 0.2rem var(--dark6);
   font-size: 2rem;
@@ -216,7 +218,7 @@ input:focus {
   outline: solid 0.2rem var(--white2);
 }
 
-button {
+button, .btn-link {
   background-color: var(--dark2);
   color: var(--white2);
   border: solid 0.1rem var(--dark);
@@ -227,18 +229,35 @@ button {
   cursor: pointer;
 }
 
-button i {
+button i, .btn-link i{
   font-size: 1.8rem;
 }
 
-button:hover {
+button:hover , .btn-link:hover {
   transition: all ease 0.4s;
   background-color: var(--dark5);
   color: var(--white2);
 }
 
-button:active {
+button:active, .btn-link:active {
   transform: scale(0.9);
+}
+
+.btn-link {
+  width: 4rem;
+  height: 4rem;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.btn-link.active {
+  background-image: var(--primary);
+  border: solid 0.1rem transparent;
+  box-shadow: 0 0 0.2rem var(--dark);
+  color: var(--white2);
 }
 
 .btn-muted {
@@ -357,4 +376,23 @@ button:active {
   font-size: 1.4rem;
   color: var(--white2);
   margin: 0.4rem 0;
+}
+
+/* int */
+
+.header-int {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: var(--dark3);
+  padding: 0.8rem 1.6rem;
+  border-radius: 0.4rem;
+  border: solid 0.1rem var(--dark2);
+}
+
+.nav-int {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
 }
