--- a/src/public/style.css
+++ b/src/public/style.css
@@ -28,14 +28,15 @@ body {
   font-size: 1.6rem;
 
   width: 100vw;
-  min-height: calc(100vh - 1rem);
+  min-height: calc(100vh - 6rem);
+  max-height: calc(100vh - 6rem);
   background-color: var(--white2);
 
   font-family: 'Inter', sans-serif;
 
   background-image: linear-gradient( 288deg,  rgba(0,85,255,1) 1.5%, rgba(4,56,115,1) 91.6% );
 
-
+  scroll-behavior: smooth;
 }
 
 #app {
@@ -43,7 +44,8 @@ body {
   flex-direction: column;
 
   width: 100vw;
-  min-height: calc(100vh - 1rem);
+  min-height: calc(100vh - 6rem);
+  max-height: calc(100vh - 6rem);
   overflow: hidden;
 }
 
@@ -101,30 +103,33 @@ body {
   align-items: center;
   justify-content: flex-end;
   padding: 0 1.6rem;
+  margin: 0 0.4rem;
+  border-radius: 0.4rem;
 }
 
 .footer span {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   gap: 0.4rem;
 }
 
 .main {
   width: 100vw;
-  min-height: calc(100vh - 7rem);
-  max-height: calc(100vh - 7rem);
+  min-height: calc(100vh - 13rem);
+  max-height: calc(100vh - 13rem);
   overflow: hidden;
   display: flex;
 }
 
 .aside {
-  max-width: 5rem;
   min-width: 5rem;
+  max-width: 5rem;
+  min-height: calc(100vh - 13.8rem);
+  
   padding: 0.4rem 0;
 
-  min-height: calc(100vh - 7.8rem);
   background-color: var(--dark3);
   color: var(--white2);
   margin: 0.4rem;
@@ -140,15 +145,15 @@ body {
   width: 100%;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   align-items: center;
   gap: 0.4rem;
   padding: 0 0.4rem;
 }
 
 .nav-link {
-  width: 100%;
-  height: 4rem;
+  min-width: 4.5rem;
+  min-height: 4.5rem;
 
   display: flex;
   align-items: center;
@@ -159,6 +164,7 @@ body {
   font-size: 2rem;
   border-radius: 0.4rem;
   text-decoration: none;
+  user-select: none;
 }
 
 .nav-link:hover {
@@ -183,24 +189,39 @@ body {
   box-shadow: 0 0 0.2rem 0 var(--dark6);
 
   min-width: calc(100vw - 6.2rem);
-  min-height: calc(100vh - 8rem);
+  min-height: calc(100vh - 14rem);
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 .page {
-  min-width: calc(100vw - 6.2rem);
-  min-height: calc(100vh - 8rem);
+  min-width: calc(100vw - 6rem);
+  min-height: calc(100vh - 21rem);
   overflow: hidden;
 }
 
 .container {
-  min-width: calc(100vw - 7.8rem);
-  min-height: calc(100vh - 7.9rem);
+  min-width: calc(100vw - 6.8rem);
+  min-height: calc(100vh - 20.8rem);
   overflow: auto;
 
-  padding: 1.6rem;
+  padding: 0.4rem;
+  overflow-x: hidden;
   overflow-y: scroll;
+}
+
+.title-m {
+  text-align: center;
+  margin: 1.6rem;
+}
+
+.p {
+  font-size: 1rem;
+  line-height: 1.8rem;
+  font-weight: 300;
+  text-align: left;
+  margin: 2rem;
+  color: var(--white2);
 }
 
 input {
@@ -211,7 +232,7 @@ input {
   box-shadow: 0 0 0.2rem var(--dark2);
   padding: 0 1.6rem;
   font-size: 1.6rem;
-  min-height: 3.5rem;
+  min-height: 4.5rem;
 }
 
 input:focus {
@@ -223,10 +244,11 @@ button, .btn-link {
   color: var(--white2);
   border: solid 0.1rem var(--dark);
   border-radius: 4px;
-  min-height: 3.5rem;
+  min-height: 4.5rem;
   padding: 0 1.6rem;
   font-weight: 700;
   cursor: pointer;
+  user-select: none;
 }
 
 button i, .btn-link i{
@@ -245,12 +267,14 @@ button:active, .btn-link:active {
 
 .btn-link {
   width: 4rem;
-  height: 4rem;
+  min-width: 4.5rem;
+  min-height: 4.5rem;
   text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 2rem;
+  user-select: none;
 }
 
 .btn-link.active {
@@ -279,23 +303,24 @@ button:active, .btn-link:active {
   display: flex;
   flex-direction: column;
   background-color: var(--dark3);
-  min-width: 32rem;
-  max-width: 32rem;
-  min-height: calc(100vh - 13rem);
-  max-height: calc(100vh - 13rem);
+  min-width: 38.5rem;
+  max-width: 38.5rem;
+  min-height: calc(100vh - 21rem);
+  max-height: calc(100vh - 21rem);
   border-radius: 0.4rem;
   overflow-y: auto;
 }
 
 .l-header {
-  min-height: 4rem;
-  background-color: var(--dark2);
+  min-height: 6rem;
+  background-color: var(--dark3);
+  border: solid 0.1rem var(--dark);
   color: var(--white2);
 
   display: flex;
   align-items: center;
-  padding: 0 0.4rem;
-  gap: 0.4rem;
+  padding: 0 0.8rem;
+  gap: 0.8rem;
 }
 
 .l-header button {
@@ -310,25 +335,42 @@ button:active, .btn-link:active {
   display: flex;
   flex-direction: column;
 
-  min-width: 32rem;
-  max-width: 32rem;
-  min-height: calc(100vh - 18rem);
-  max-height: calc(100vh - 18rem);
-
+  min-width: 38.5rem;
+  max-width: 38.5rem;
+  min-height: calc(100vh - 28rem);
+  max-height: calc(100vh - 28rem);
+  
   gap: 0.4rem;
-  padding: 1.6rem;
+  padding: 0 3.2rem;
   overflow-y: auto;
 }
 
-.l-main h5 {
+
+.l-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+.l-logo i {
+  font-size: 6rem;
+}
+.l-logo span {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.l-main .title {
   text-align: center;
-  margin-bottom: 2rem;
+  margin: 1rem 0 2rem 0;
   color: var(--white);
+  font-weight: 200;
 }
 
 .l-footer {
   min-height: 1rem;
-  background-color: var(--dark2);
+  background-color: transparent;
   color: var(--white2);
 
   display: flex;
@@ -340,7 +382,7 @@ button:active, .btn-link:active {
 .l-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.6rem;
 }
 
 .form-control {
@@ -351,14 +393,18 @@ button:active, .btn-link:active {
 .form-control-button {
   display: flex;
   justify-content: space-between;
-  gap: 0.4rem;
-  margin: 1.6rem 0;
+  gap: 4rem;
+  margin: 0;
+}
+
+.form-control-button button {
+  flex: 1;
 }
 
 .form-control label {
   color: var(--white);
   font-size: 1.4rem;
-  margin-bottom: 0.6rem;
+  margin-bottom: 0.8rem;
 }
 
 .fc-group {
@@ -373,9 +419,16 @@ button:active, .btn-link:active {
 
 .lf-message {
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  font-weight: 400;
   color: var(--white2);
-  margin: 0.4rem 0;
+  margin: 1rem 0 1.6rem 0;
+}
+
+.l-p {
+  font-size: 1rem;
+  font-weight: 200;
+  text-align: center;
 }
 
 /* int */
@@ -386,7 +439,7 @@ button:active, .btn-link:active {
   justify-content: space-between;
 
   background-color: var(--dark3);
-  padding: 0.8rem 1.6rem;
+  padding: 0.4rem;
   border-radius: 0.4rem;
   border: solid 0.1rem var(--dark2);
 }
