--- a/src/public/style.css
+++ b/src/public/style.css
@@ -202,10 +202,10 @@ body {
 
 .container {
   min-width: calc(100vw - 6.8rem);
-  min-height: calc(100vh - 20.8rem);
+  min-height: calc(100vh - 21rem);
   overflow: auto;
 
-  padding: 0.4rem;
+  padding: 0.4rem 0;
   overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -440,12 +440,65 @@ button:active, .btn-link:active {
 
   background-color: var(--dark3);
   padding: 0.4rem;
+  margin: 0 0.4rem 0 0.4rem;
   border-radius: 0.4rem;
   border: solid 0.1rem var(--dark2);
+}
+
+.h-current-user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.h-current-user h3 {
+  display: flex;
 }
 
 .nav-int {
   display: flex;
   align-items: center;
   gap: 0.4rem;
+}
+
+.contact-list {
+  min-height: calc(100vh - 20.9rem);
+  max-height: calc(100vh - 20.9rem);
+  overflow-y: auto;
+  padding: 0.4rem 0 0 0;
+}
+.contact-list li {
+  min-height: 5rem;
+  margin: 0 0.4rem 0.4rem 0.4rem;
+  padding: 0 0.4rem;
+  
+  background-color: var(--dark2);
+  border: solid 0.1rem var(--dark);
+  border-radius: 0.4rem;
+  
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.contact-list li:hover {
+  transition: all ease .4s;
+  background-color: var(--dark);
+}
+.contact-list li:active {
+  transform: scale(0.9);
+}
+
+.contact-list li > img , .h-current-user > img{
+  width: 4rem;
+  max-width: 4rem;
+  height: 4rem;
+  max-height: 4rem;
+  
+  object-fit: cover;
+  border: solid 0.2rem var(--dark);
+  border-radius: 0.4rem;
+}
+.contact-list li > h3 {
+  filter: drop-shadow(-0.2rem 0.2rem 0.1rem #4444dd);
 }
